--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@
 }
 
 .profile_image {
-  background-image: url(./.common/icon.jpg);
+  background-image: url(./common/icon.jpg);
   width: 6rem;
   height: 6rem;
   display: flex;
